--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --bg-elevate-0: hsla(200, 13%, 95%, 1);
+  --bg-elevate-1: hsla(0, 0%, 98%, 1);
+  --react-blue: hsla(193, 94%, 68%, 1);
+  --text-border-black: hsla(240, 2%, 12%, 1);
+  --icon-default: hsla(0, 0%, 49%, 1);
+  --icon-success: hsla(120, 99%, 37%, 1);
+  --icon-delete: hsla(0, 99%, 59%, 1);
+  --bg-elevate-99: hsla(220, 12%, 14%, 0.015);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  min-width: 37.5rem;
+  max-width: 37.5rem;
+  height: auto;
+  margin: auto;
+}
+
+#root {
+  background: var(--bg-elevate-99);
+  height: 100%;
+  width: 100%;
+  margin: auto;
+}
+
+ul {
+  list-style: none;
+  width: 32.7rem;
+  margin: 4rem auto 8rem;
+}
+
+li {
+  width: 100%;
+  min-height: 10rem;
+  max-height: auto;
+  margin-bottom: 2.4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  background: var(--bg-elevate-1);
+  box-shadow: 0px 5px 50px 0px hsla(240, 2%, 12%, 0.15);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 2.2rem;
+  text-align: center;
+}
+
+li p { 
+  width: 50%;
+}
+
+li span {
+  cursor: pointer;
+}
+
+li span:hover {
+  font-size: 2.4rem;
+}
+
+button {
+  position: fixed;
+  bottom: 0;
+  border: solid 0 var(--react-blue);
+  width: 37.5rem;
+  height: 6rem;
+  background-color: var(--react-blue);
+  cursor: pointer;
+}
+
+button:hover {
+  font-size: 2.4rem;
 }
