--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   --icon-success: hsla(120, 99%, 37%, 1);
   --icon-delete: hsla(0, 99%, 59%, 1);
   --bg-elevate-99: hsla(220, 12%, 14%, 0.015);
+  --placeholder: hsla(220, 12%, 14%, 0.2);
+  --hover: hsla(218, 45%, 22%, 1);
 }
 
 * {
@@ -32,6 +34,19 @@ body {
   height: 100%;
   width: 100%;
   margin: auto;
+}
+
+input {
+  border: solid 0.2rem var(--placeholder);
+}
+
+input::placeholder {
+  color: var(--placeholder);
+}
+
+input:focus {
+  border: solid 0.2rem var(--text-border-black);
+  outline: none;
 }
 
 ul {
@@ -70,6 +85,22 @@ li span:hover {
   font-size: 2.4rem;
 }
 
+li span i {
+  color: var(--icon-default)
+}
+
+.fa-trash:hover {
+  color: var(--icon-delete)
+}
+
+.fa-pen:hover {
+  color: var(--edit);
+}
+
+.fa-check:hover {
+  color: var(--icon-success)
+}
+
 button {
   position: fixed;
   bottom: 0;
@@ -78,8 +109,18 @@ button {
   height: 6rem;
   background-color: var(--react-blue);
   cursor: pointer;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: 0px 5px 25px 0px hsla(193, 94%, 68%, 0.5);
 }
 
 button:hover {
+  height: 6.5rem;
+}
+
+.fa-circle-plus {
   font-size: 2.4rem;
+}
+
+.fa-circle-plus:hover {
+  font-size: 3.4rem;
 }
