--- a/src/index.css
+++ b/src/index.css
@@ -101,26 +101,25 @@ li span i {
   color: var(--icon-success)
 }
 
-button {
+.plusButton {
   position: fixed;
   bottom: 0;
   border: solid 0 var(--react-blue);
   width: 37.5rem;
-  height: 6rem;
   background-color: var(--react-blue);
   cursor: pointer;
   border-radius: 1rem 1rem 0 0;
   box-shadow: 0px 5px 25px 0px hsla(193, 94%, 68%, 0.5);
+  height: 6rem;
+  font-weight: 400;
 }
 
-button:hover {
+/* .plusButton:hover {
   height: 6.5rem;
-}
+  font-size: 5rem;
+  font-weight: bold;
+} */
 
-.fa-circle-plus {
-  font-size: 2.4rem;
-}
-
-.fa-circle-plus:hover {
-  font-size: 3.4rem;
+.fa-plus {
+  font-size: 2.5rem;
 }
