--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --icon-delete: hsla(0, 99%, 59%, 1);
   --bg-elevate-99: hsla(220, 12%, 14%, 0.015);
   --placeholder: hsla(220, 12%, 14%, 0.2);
-  --hover: hsla(218, 45%, 22%, 1);
+  --edit: hsla(218, 45%, 22%, 1);
 }
 
 * {
@@ -53,73 +53,4 @@ ul {
   list-style: none;
   width: 32.7rem;
   margin: 4rem auto 8rem;
-}
-
-li {
-  width: 100%;
-  min-height: 10rem;
-  max-height: auto;
-  margin-bottom: 2.4rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-  background: var(--bg-elevate-1);
-  box-shadow: 0px 5px 50px 0px hsla(240, 2%, 12%, 0.15);
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 2.2rem;
-  text-align: center;
-}
-
-li p { 
-  width: 50%;
-}
-
-li span {
-  cursor: pointer;
-}
-
-li span:hover {
-  font-size: 2.4rem;
-}
-
-li span i {
-  color: var(--icon-default)
-}
-
-.fa-trash:hover {
-  color: var(--icon-delete)
-}
-
-.fa-pen:hover {
-  color: var(--edit);
-}
-
-.fa-check:hover {
-  color: var(--icon-success)
-}
-
-.plusButton {
-  position: fixed;
-  bottom: 0;
-  border: solid 0 var(--react-blue);
-  width: 37.5rem;
-  background-color: var(--react-blue);
-  cursor: pointer;
-  border-radius: 1rem 1rem 0 0;
-  box-shadow: 0px 5px 25px 0px hsla(193, 94%, 68%, 0.5);
-  height: 6rem;
-  font-weight: 400;
-}
-
-/* .plusButton:hover {
-  height: 6.5rem;
-  font-size: 5rem;
-  font-weight: bold;
-} */
-
-.fa-plus {
-  font-size: 2.5rem;
 }
