--- a/src/css/TodoSearch.css
+++ b/src/css/TodoSearch.css
@@ -1,17 +1,38 @@
-.search-bar {
-    width: 27.9rem;
-    height: 6.4rem;
-    margin: 0 auto;
-    margin-top: 4.8rem;
+:root {
+  --text-border-black: hsla(240, 2%, 12%, 1);
+  --placeholder: hsla(220, 12%, 14%, 0.2);
+  --react-blue: hsla(193, 94%, 68%, 1);
 }
 
-input {
-    border-radius: 0.2rem;
-    box-shadow: 0px 5px 50px 0px hsla(220, 12%, 14%, 0.25);
-    width: 100%;
-    height: 100%;
-    font-size: 2.4rem;
-    padding-left: 4.8rem;
-    padding-right: 2.4rem;
-    cursor: pointer;
-  }
+.search-bar {
+  width: 22.5rem;
+  height: 5rem;
+  margin: 0 auto;
+  margin-top: 3rem;
+}
+
+input[type="search"] {
+  border-radius: 1rem;
+  box-shadow: 0px 0px 50px 0px var(--placeholder);
+  width: 100%;
+  height: 100%;
+  font-size: 1.6rem;
+  padding-left: 4.8rem;
+  padding-right: 1.6rem;
+  cursor: pointer;
+  font-family: "Asap", sans-serif;
+}
+
+input[type="search"] {
+  border: solid 0.2rem var(--placeholder);
+}
+
+input[type="search"]::placeholder {
+  color: var(--placeholder);
+}
+
+input[type="search"]:focus {
+  border: solid 0.2rem var(--react-blue);
+  box-shadow: 0px 0px 50px 0px var(--placeholder);
+  outline-color: var(--react-blue);
+}
