--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,14 @@ html {
 body {
   min-width: 37.5rem;
   max-width: 37.5rem;
+  height: 100vh;
   height: auto;
   margin: auto;
 }
 
 #root {
   background: var(--bg-elevate-99);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: auto;
   padding-bottom: 2rem;
