--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -5,19 +5,20 @@
 }
 
 .plusButton {
-  position: fixed;
-  width: 37.5rem;
+  position: relative;
+  width: 100%;
   height: 6rem;
-  bottom: 0rem;
-  border: solid 0 var(--react-blue);
+  bottom: 3rem;
+  border: solid 0.2rem var(--react-blue);
   background-color: var(--react-blue);
-  border-radius: 1rem 1rem 0 0;
-  box-shadow: 0px 5px 25px 0px var(--react-blue);
+  border-radius: 1rem;
+  /* box-shadow: 0px 5px 25px 0px var(--react-blue); */
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: bottom 1s ease;
+  transition: bottom 1s, border-radius 1s ease;
+  margin: auto;
 }
 
 .plus {
@@ -31,9 +32,11 @@
 }
 
 .plusButton--clicked {
+  border: solid 0.2rem var(--icon-delete);
   background-color: var(--icon-delete);
-  box-shadow: 0px 5px 25px 0px var(--icon-delete);
-  bottom: 10rem;
+  /* box-shadow: 0px 5px 25px 0px var(--icon-delete); */
+  bottom: 13rem;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .plus--clicked {
