--- a/src/ModalNewTodo/ModalNewTodo.css
+++ b/src/ModalNewTodo/ModalNewTodo.css
@@ -12,20 +12,23 @@
 }
 
 .modal {
-  width: 37.5rem;
+  position: relative;
+  width: 100%;
   height: 10rem;
-  position: fixed;
-  bottom: -10rem;
+  bottom: 3rem;
   background: var(--bg-elevate-1);
-  box-shadow: 0px 5px 50px 0px var(--text-border-black);
-  transition: bottom 1s ease;
+  /* box-shadow: 0px -5px 25px 0px var(--text-border-black); */
+  transition: bottom 1s, visibility 1s, opacity 1s ease;
   display: flex;
   align-items: center;
   justify-content: center;
+  /* visibility: visible; */
+  opacity: 1;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .modal-plusButton--clicked {
-  bottom: 0rem;
+  bottom: 13rem;
 }
 
 input[type="text"] {
@@ -44,14 +47,25 @@ input[type="text"]::placeholder {
   color: var(--placeholder);
 }
 
+input[type="text"]:focus {
+  border-color: var(--react-blue);
+}
+
 .addBtn {
   width: 5rem;
   height: 5rem;
   border: solid 0.2rem var(--react-blue);
-  box-shadow: 0px 0px 10px 0px var(--react-blue);
+  /* box-shadow: 0px 0px 10px 0px var(--react-blue); */
   background-color: var(--react-blue);
   border-radius: 1rem;
   font-size: 3rem;
   font-weight: 700;
   color: var(--bg-elevate-1);
+  cursor: pointer;
+}
+
+.hide-modal {
+  /* visibility: hidden; */
+  opacity: 0;
+  /* transition: visibility 1s, opacity 1s ease; */
 }
