--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -7,7 +7,7 @@
   --text-border-black: hsla(240, 2%, 12%, 0.15);
 }
 
-li {
+.list {
   width: 100%;
   min-height: 10rem;
   max-height: auto;
@@ -23,6 +23,7 @@ li {
   font-weight: 400;
   line-height: 2.2rem;
   text-align: left;
+  border-radius: 1rem;
 }
 
 .todoItem {
@@ -34,11 +35,11 @@ li {
   text-decoration-thickness: 0.2rem;
 }
 
-li span {
+.list span {
   cursor: pointer;
 }
 
-li span:hover {
+.list span:hover {
   font-size: 2.4rem;
 }
 
