--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,6 +1,10 @@
 ul {
   list-style: none;
-  width: 32.7rem;
-  margin: 3rem auto 6.5rem;
-  padding-bottom: 6rem;
+  width: 80%;
+  height: 49.6rem;
+  margin: 3rem auto 0;
+  padding-bottom: 0;
+  overflow-y: auto;
+  box-shadow: 0px 0px 50px 0px var(--text-border-black);
+  overscroll-behavior-y: contain;
 }
