--- a/src/index.css
+++ b/src/index.css
@@ -20,20 +20,25 @@
 html {
   font-size: 62.5%;
   font-family: "Asap", sans-serif;
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
 }
 
 body {
-  min-width: 37.5rem;
-  max-width: 37.5rem;
-  height: 100vh;
-  height: auto;
-  margin: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 #root {
   background: var(--bg-elevate-99);
-  height: 100vh;
-  width: 100%;
+  padding-bottom: 0;
+  min-width: 37.5rem;
+  /* min-height: 60rem;
+  max-width: 42.5rem; */
+  max-height: 80.3rem;
   margin: auto;
-  padding-bottom: 2rem;
+  border: solid 0.2rem var(--text-border-black);
+  border-radius: 1rem;
 }
