--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -6,18 +6,19 @@
 
 .plusButton {
   position: relative;
-  width: 100%;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
   bottom: 3rem;
+  left: 15rem;
   border: solid 0.2rem var(--react-blue);
   background-color: var(--react-blue);
-  border-radius: 1rem;
+  border-radius: 50%;
   /* box-shadow: 0px 5px 25px 0px var(--react-blue); */
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: bottom 1s, border-radius 1s ease;
+  /* transition: bottom 1s, border-radius 1s ease; */
   margin: auto;
 }
 
@@ -31,14 +32,18 @@
   color: var(--bg-elevate-0);
 }
 
-.plusButton--clicked {
+.plus:hover {
+  transform: rotate(225deg);
+}
+
+/* .plusButton--clicked {
   border: solid 0.2rem var(--icon-delete);
   background-color: var(--icon-delete);
-  /* box-shadow: 0px 5px 25px 0px var(--icon-delete); */
+  box-shadow: 0px 5px 25px 0px var(--icon-delete);
   bottom: 13rem;
   border-radius: 1rem 1rem 0 0;
 }
 
 .plus--clicked {
   transform: rotate(225deg);
-}
+} */
