--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,24 @@ body {
 #root {
   background: var(--bg-elevate-99);
   padding-bottom: 0;
-  min-width: 37.5rem;
-  /* min-height: 60rem;
-  max-width: 42.5rem; */
+  min-width: 38rem;
+  min-height: 80.3rem;
+  max-width: 38rem;
   max-height: 80.3rem;
   margin: auto;
   border: solid 0.2rem var(--text-border-black);
   border-radius: 1rem;
+}
+
+.modalContainer {
+  width: 38rem;
+  height: 80.3rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  border-radius: 1rem;
+  background-color: hsla(0, 0%, 49%, 0.5);
 }
