--- a/src/ModalNewTodo/ModalNewTodo.css
+++ b/src/ModalNewTodo/ModalNewTodo.css
@@ -1,18 +1,11 @@
 :root {
-  --bg-elevate-0: hsla(200, 13%, 95%, 1);
   --bg-elevate-1: hsla(0, 0%, 98%, 1);
   --react-blue: hsla(193, 94%, 68%, 1);
-  --text-border-black: hsla(240, 2%, 12%, 0.15);
-  --icon-default: hsla(0, 0%, 49%, 1);
-  --icon-success: hsla(120, 99%, 37%, 1);
-  --icon-delete: hsla(0, 99%, 59%, 1);
-  --bg-elevate-99: hsla(220, 12%, 14%, 0.015);
   --placeholder: hsla(220, 12%, 14%, 0.2);
-  --edit: hsla(218, 45%, 22%, 1);
+  --icon-delete: hsla(0, 99%, 59%, 1);
 }
 
 .modal {
-  /* position: relative; */
   position: absolute;
   top: 0;
   right: 0;
@@ -20,39 +13,32 @@
   left: 0;
   margin: auto;
   width: 30rem;
-  height: 12rem;
+  height: 17rem;
   background: var(--bg-elevate-1);
-  /* transition: bottom 1s, visibility 1s, opacity 1s ease; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  /* opacity: 1; */
   border-radius: 1rem;
-  /* border-radius: 0 0 1rem 1rem; */
 }
 
-/* .modal-plusButton--clicked {
-  bottom: 13rem;
-} */
-
-input[type="text"] {
+.textarea {
   width: 22.5rem;
-  height: 4rem;
-  /* margin-right: 1rem; */
+  height: 8rem;
   outline: none;
-  padding-left: 2rem;
   border-radius: 1rem;
   border: solid 0.2rem var(--placeholder);
   font-family: "Asap", sans-serif;
   font-size: 1.6rem;
+  padding-left: 0.8rem;
+  padding-top: 0.8rem;
 }
 
-input[type="text"]::placeholder {
+.textarea::placeholder {
   color: var(--placeholder);
 }
 
-input[type="text"]:focus {
+.textarea:focus {
   border-color: var(--react-blue);
 }
 
@@ -72,10 +58,6 @@ input[type="text"]:focus {
   background-color: var(--react-blue);
   color: var(--bg-elevate-1);
 }
-
-/* .hide-modal {
-  opacity: 0;
-} */
 
 .closeBtn {
   width: 9rem;
